# unibase-aip-sdk

./: .gitignore  DEPLOYMENT_COMPLETE.md  EXAMPLES.md  MIGRATION.md  README.md  pyproject.toml
aip_sdk/: __init__.py  _internal.py  agent_builder.py  auth.py  client.py  exceptions.py  external_agent_client.py  gateway_client.py  service.py  types.py
aip_sdk/a2a/: __init__.py  agent_adapter.py  agent_card.py  client.py  client_factory.py  envelope.py  gateway_client.py  http_client.py  interface.py  local_client.py  registry.py  server.py  types.py
aip_sdk/agent/: __init__.py  adapter.py  context.py  external.py
aip_sdk/collaboration/: __init__.py  client.py
aip_sdk/commerce/: __init__.py  client.py  evaluator.py  interfaces.py
aip_sdk/core/: __init__.py  exceptions.py  type_adapters.py  types.py
aip_sdk/gateway/: __init__.py  a2a_client.py  client.py  interface.py
aip_sdk/messaging/: __init__.py  extensions.py  types.py
aip_sdk/platform/: __init__.py  client.py
aip_sdk/registry/: __init__.py  registry.py
aip_sdk/utils/: config.py  logger.py
aip_sdk/wrappers/: __init__.py  adk.py  generic.py  langgraph.py
examples/: README.md  agent_commerce_demo.py  agent_sdk_startup_guide.py  auto_verification_demo.py  automatic_submit_agent.py  client_example.py  client_usage.py  evaluator_logic.py  invoke_agents.py  list_agents.py  prediction_market_agent.py  private_agent_full.py  public_agent_full.py  register_agent.py  streaming_agent.py
examples/collaboration/: 01_memory.py  02_vote.py  03_guandan.py  04_metering.py  05_custom_session.py  06_encryption.py  07_scope_lifecycle.py  08_batch_operations.py  09_selective_persist.py  10_rps.py  11_team_collaboration.py  README.md  _helpers.py  e2e_full_test.py
skills/collaboration/: SKILL.md
skills/collaboration/references/: errors.md  games.md  memory.md  metering.md  protocol.md  session.md  setup.md
