[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unibase-aip-sdk"
version = "0.1.0"
description = "Developer SDK for building agents on Unibase Agent Interoperability Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Unibase Team", email = "team@unibase.io"},
]
keywords = ["ai", "agents", "blockchain", "web3", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # HTTP client
    "httpx>=0.27.0",
    # Web server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/unibaseio/unibase-aip-sdk"
Documentation = "https://github.com/unibaseio/unibase-aip-sdk#readme"
Repository = "https://github.com/unibaseio/unibase-aip-sdk"
Issues = "https://github.com/unibaseio/unibase-aip-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["aip_sdk"]
